# ffc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  README.md
.cargo/: config
.github/workflows/: build.yml  ci-generic.yml  ci-main.yml  ci-tags.yml  ci.yml  code-coverage.yml  generic.yml  main.yml  on-remainings.yml  reusable-coverage.yml  reusable-test.yml  tags.yml
.github/workflows/reusables/: release.yml
src/: main.rs
src/libs/: browser.rs  build_logger.rs  cli_args.rs  init_logger.rs  mod.rs  sanitize_browser.rs  sanitize_browser_list.rs
src/libs/__tests__/: build_logger.spec.rs  cli_args.spec.rs  init_logger.spec.rs  sanitize_browser.spec.rs  sanitize_browser_list.spec.rs
src/libs/files/: fmt_browser_filepaths.rs  get_user_home_dir.rs  is_to_be_sanitized.rs  mod.rs  overwrite.rs  rewrite.rs  sanitize_files.rs
src/libs/files/__tests__/: fmt_browser_filepaths.spec.rs  get_user_home_dir.spec.rs  is_to_be_sanitized.spec.rs  overwrite.spec.rs  rewrite.spec.rs  sanitize_files.spec.rs
tests/mocks/pristine/: no-reference.txt  reference.txt
