[package]
name = "ffc"
version = "0.9.2"
edition = "2021"
authors = ["riddlewiggler"]
rust-version = "1.70"
description = "It cleans the certificate files (PKCS11) used by your browsers"
homepage = "https://github.com/riddlewiggler/ffc"
repository = "https://github.com/riddlewiggler/ffc"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ffc"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.4"
anyhow = "1.0.72"
clap = { version = "4.4.2", features = ["derive", "unstable-styles"] }
env_logger = "0.10.0"
home = "0.5.5"
log = "0.4.20"

[profile.release]
opt-level = 3
strip = "debuginfo"
